--- a/hw7.tex
+++ b/hw7.tex
@@ -322,7 +322,9 @@ return new flow ~$f'$~
 \subsection*{Proof}
 Let's first assume the helper function actually works, we will prove its correctness later. We now prove the algorithm returns a correct result if helper function works. In the following proof, we focus on a single cycle $C$ which could be any cycles, $\varepsilon$ is the smallest flow in the cycle, $E_{exists}$ is the existing or "non-deleted" edges.
 
-\begin{proof}[1]{To prove that $f'$ is a valid flow:} Conservation
+To prove that $f'$ is a valid flow:
+
+\begin{proof}[1]{Conservation}
 
 Focus on a cycle $C \subseteq E_{exists}$, $C$ has a set of node $\{v_1, v_2, ..., v_k\}, 1 < k \leq n$. Define the $e_{i,in} \in C$ for $v_i$ as the in-flow edge, $e_{i,out} \in C$ as the out-flow edge in the cycle. Define $s_{i,in} \notin C$ as the in-flow edge for $v_i$ that is not in cycle and $s_{i,out} \notin C$ as the out-flow edge for $v_i$ that is not in cycle. Define $f_{in}(v_i)$ and $f_{out}(v_i)$ as the total in-flow and out-flow for $v_i$.
 
@@ -332,20 +334,20 @@ Before subtraction, \[\forall v_i \in \{v_1, ..., v_k\}: f_{in}(v_i) = f(e_{i,in
 
 Since the assignment in algorithm doesn't impact the edge not in cycle, therefore $\sum_{s_{i,in}} f(s_{i,in}) = \sum_{s_{i,out}} f(s_{i,out})$. Therefore, the in-flow and out-flow doesn't change for $v_i$:
 
-\[f_{in}(v_i) - \varepsilon = f(e_{in} \in C) + \sum_{s_{i,in}} f(s_{i,in}) - \varepsilon = f(e_{out} \in C) \sum_{s_{i,out}} f(s_{i,out}) - \varepsilon = f_{out}(v_i) - \varepsilon\]
+\[f_{in}(v_i) - \varepsilon = f(e_{i,in}) + \sum_{s_{i,in}} f(s_{i,in}) - \varepsilon = f(e_{i,out}) +\sum_{s_{i,out}} f(s_{i,out}) - \varepsilon = f_{out}(v_i) - \varepsilon\]
 
-Therefore, every node in $C$ is still conservative. for all nodes that are included cycle, conservation holds.
+Therefore, every node in any $C$ is still conservative. Thus, for graph $G$, conservation holds.
 
 
 \end{proof}
 
 \begin{proof}[2]{To prove capacity doesn't exceed}
-    \[f'(e) = f(e) - \varepsilon \leq f(e) \leq c(e)\] because $f$ is a valid flow
+    \[f'(e) = f(e) - \varepsilon \leq f(e) \leq c(e)\] because $f$ is a valid flow and $f(e)$ subtract some non-negative value.
     
 \end{proof}
 
 \begin{proof}[3]{To prove each flow is non-negative}
-    \[f'(e) = f(e) - \varepsilon \geq 0\] because $\varepsilon = \mathbf{\min}(f(e))$ and thus $\varepsilon \leq f(e)$, $\forall e \in C$
+    \[f'(e) = f(e) - \varepsilon \geq 0\] because $\varepsilon = \mathbf{\min}(f(e))$ and thus $\varepsilon \leq f(e)$, $\forall e \in C$. This can also show that $f'(e)\leq f(e) \forall e \in G$ since we subtract some non-negative value from $f(e)$.
     
 \end{proof}
 
@@ -371,7 +373,7 @@ Although it is possible for a node to have multiple parents in a graph, we will 
 \end{proof}
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=6cm]{WX20221104-180416@2x.png}
+    \includegraphics[width=5cm]{WX20221104-180416@2x.png}
     \caption{G=(V,E)}
     \label{fig:galaxy}
 \end{figure}
