--- a/hw9.tex
+++ b/hw9.tex
@@ -272,22 +272,22 @@ $S(G)$ takes an input of a graph $G$ and return the min-cut $(S, \Bar{S})$.
 \subsection*{Problem a}
 
 \begin{proof}{}{DECISION-OPTIMIZATION polynomial-time equivalence}
-    \subsubsection*{1. DECISION $\leq_p$ OPTIMIZATION}
+    \subsubsection*{1. DECISION $\leqslant_p$ OPTIMIZATION}
 
-Suppose $Opt(G)$ finds the smallest capacity value of any $s-t$ cut, denote it as $C'$. In order to find out if there is an $s-t$ cut $(S, \Bar{S})$ with capacity at most $C$, we need to compare $C$ and $C'$. If $C' \leq C$, then our answer for \textbf{Decision} problem is "yes". If $C' > C$, then our answer for \textbf{Decision} problem is "no" because the capacity can never be less than $C'$. Since in $D$, we use $Opt$ once and do a $\mathcal{O}(1)$ comparison, DECISION $\leq_p$ OPTIMIZATION
+Suppose $Opt(G)$ finds the smallest capacity value of any $s-t$ cut, denote it as $C'$. In order to find out if there is an $s-t$ cut $(S, \Bar{S})$ with capacity at most $C$, we need to compare $C$ and $C'$. If $C' \leqslant C$, then our answer for \textbf{Decision} problem is "yes". If $C' > C$, then our answer for \textbf{Decision} problem is "no" because the capacity can never be less than $C'$. Since in $D$, we use $Opt(G)$ once and do a $\mathcal{O}(1)$ comparison, DECISION $\leqslant_p$ OPTIMIZATION
 
-\subsubsection*{2. OPTIMIZATION $\leq_p$ DECISION}
+\subsubsection*{2. OPTIMIZATION $\leqslant_p$ DECISION}
 
 Suppose $D$ returns if an $s-t$ cut $(S,\Bar{S})$ with capacity at most $C$ exists. We can first find out the largest possible capacity $C^+$ by summing the capacity of all the positive edges. Similarly, we can find out the smallest possible capacity $C^-$ by summing the capacity of all edges with negative capacities. We can have an array to store the information for capacities from $C^-$ to $C^+$, which is $\mathcal{O}(n)$ with total $C^+-C^-+1$ elements. With start index $0$ and ending index $C^+-C^-$, we can implement binary-search-like algorithm to determine the smallest capacity. Notice that if we find a capacity value $C$ where $D(C)$ is true but $D(C-1)$ is false, we find the smallest capacity of any $s-t$ cut because no $s-t$ cut has lower capacity than $C$. 
 
-\textbf{The running time:} Calculating $C^-$ and $C^+$ requires $\mathcal{O}(|E|)$. Notice that the running time is $\mathcal{O}(log n)$ for binary search. Since $C^++|C^-|+1 = \mathcal{O}(n)$, there are $\mathcal{O}(2^n)$ elements in terms of the number of bits. Therefore, the binary search which takes $\mathcal{O}(log{2^n}) = \mathcal{O}(n)$ is linear in terms of numbers of bit. Notice that the arithmetic operations in the algorithm take $\mathcal{O}(1)$, therefore the running time of this $Opt$ with $D$ is weakly polynomial. [The algorithm is below]
+\textbf{The running time:} Calculating $C^-$ and $C^+$ requires $\mathcal{O}(|E|)$. Notice that the running time is $\mathcal{O}(log n)$ for binary search. Since $C^++|C^-|+1 = \mathcal{O}(n)$, there are $\mathcal{O}(2^n)$ elements in terms of the number of bits. Therefore, the binary search which takes $\mathcal{O}(log{2^n}) = \mathcal{O}(n)$ is linear in terms of numbers of bit. Notice that the arithmetic operations in the algorithm take $\mathcal{O}(1)$, therefore the running time of this $Opt(G)$ with $D$ is weakly polynomial. [The algorithm is below]
 
 \begin{proof}[Algorithm]{}
 		\renewcommand{\qedsymbol}{}
-		Algorithm $Opt$ with "API" $D$
+		Algorithm $Opt(G)$ with "API" $D$
 		\begin{lstlisting}[basicstyle=\fontsize{8}{9}\selectfont\ttfamily]
 ~$G(V,E)$~ := input Graph  ~$s$~ := source node  ~$t$~ := tank node
-~$D$~ := Decision Problem API  ~$C^-$~ := ~$\sum_{e\in E:c_e\leq 0 }c_e$~ ~$C^+$~ := ~$\sum_{e\in E:c_e>0 0 }c_e$~
+~$D$~ := Decision Problem API  ~$C^-$~ := ~$\sum_{e\in E:c_e\leqslant 0 }c_e$~ ~$C^+$~ := ~$\sum_{e\in E:c_e>0 0 }c_e$~
 int L = 0; int R = ~$|C^-|+C^+$~;
 while(R>L){
     int M = L + (R-L)/2;
@@ -298,29 +298,52 @@ return R
 		\end{lstlisting} 
 \end{proof}
 
-Therefore,   OPTIMIZATION $\leq_p$ DECISION.
-
+Therefore,   OPTIMIZATION $\leqslant_p$ DECISION.
 Now that \textbf{Optimization problem} and \textbf{Decision problem} can be mutually polynomial-time reducible, they are polynomial-time equivalent.
 \end{proof}
 
-\subsection*{Problem a}
+\subsection*{Problem b}
 \begin{proof}{}{OPTIMIZATION-SEARCH polynomial-time equivalence}
     
-\subsubsection*{1. Optimization $\leq_p$ SEARCH}
-Suppose $S(G)$ finds the min-cut $(S,\Bar{S})$ for the graph $G$ that minimizes $c(S,\Bar{S})$. By the definition of min-cut, the value of $c(S,\Bar{S})$ is already the smallest capacity value of any $s-t$ cut. Therefore, by finding min-cut $(S,\Bar{S})$ using $S(G)$ and calculate the capacity $c(S,\Bar{S})$ in $\mathcal{O}(|E|)$,  Optimization $\leq_p$ SEARCH.
+\subsubsection*{1. OPTIMIZATION $\leqslant_p$ SEARCH}
+Suppose $S(G)$ finds the min-cut $(S,\Bar{S})$ for the graph $G$ that minimizes $c(S,\Bar{S})$. By the definition of min-cut, the value of $c(S,\Bar{S})$ is already the smallest capacity value of any $s-t$ cut. Therefore, since in $Opt(G)$ we find min-cut $(S,\Bar{S})$ using $S(G)$ and calculate the capacity $c(S,\Bar{S})$ in $\mathcal{O}(|E|)$,  OPTIMIZATION $\leqslant_p$ SEARCH.
+
+\subsubsection*{2. SEARCH $\leqslant_p$ OPTIMIZATION} 
 
 \end{proof}
 
-    
-\subsection*{Algorithm}
-\begin{proof}[Algorithm]{}
-		\renewcommand{\qedsymbol}{}
-		An Algorithm to...
-		\begin{lstlisting}[basicstyle=\fontsize{8}{9}\selectfont\ttfamily]
 
-        
-		\end{lstlisting} 
-\end{proof}
+\section*{Problem2}
+\subsubsection*{Problem a}
+In the same scenario, we can convert the problem into a "natural" decision problem: "can the difference $\Delta$ between the total skill of the most skilled team and the least skilled team be at most (less than or equal to) a value $D$." 
 
+\textbf{Certificate:} an classroom of $n$ people, a collection of $k$ teams (each with $n/k$ people), each with student has $s_i$ integer skill value.
+
+\textbf{Certifier:} check if this is the correct collection of $k$ teams, calculate the skill difference $\Delta$ between the maximum team and the minimum team, and compare it with $D$.
+
+The certifier of this problem needs (1) calculate the total score for each team, it requires $\mathcal{O}(n)$ for looping all $n$ students. (2) loop through all $k$ groups and store the $\mathbf{\max}$ and $\mathbf{\min}$ in $\mathcal{O}(k)$ (3) compute the difference $\Delta = \mathbf{\max} - \mathbf{\min}$ (4) then compare $\Delta$ with $D$. If $\Delta < D$, output "yes", else "no". Since the certifier requires $\mathcal{O}(n+k)$, and comparison between two integers is easy, the converted decision problem is in \textbf{NP}.
+
+\subsubsection*{Problem b}
+In the same scenario, we can convert the problem into a "natural" decision problem: "can the a set $E$ of undirected edges such that for each of the cuts $(S_i, \Bar{S_i})$, the number of edges it cuts in the graph $G=(V, E)$ is at most $C$.
+
+\textbf{Certificate:} a set $E$ of undirected edges on $G$
+
+\textbf{Certifier:} check if for all cut $(S_i,\Bar{S_i})$, the number of edges it cuts in $G=(V,E)$ is at most $C$
+
+The certifier of this problem needs (1) loop through all $k$ possible cuts, it requires $\mathcal{O}(k)$ times of iterations (2) check the cut capacity for each cut $(S_i, \Bar{S_i})$, each of which requires $\mathcal{O}(|E|)$. Since the certifier requires $\mathcal{O}(k|E|)$, and the comparison between two values is easy, the converted decision problem is in \textbf{NP}.
+
+\section*{Problem3}
+\subsection*{Problem a}
+Can SOKOBAN be solved with at most $C$ steps ($C$ is an integer).
+
+\subsection*{Problem b}
+A sequence of move of the character
+
+\subsection*{Problem c}
+Follow the sequence of move, check whether or not all boxes are put into the destination, and sees if the steps of the move in the sequence is at most (less than or equal) $C$.
+
+
+\section*{Problem4}
+\subsection*{Problem a}
 
 \end{document}
